kubernetes-owncloud/oc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  labels:
    name: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: owncloud/server:10.0.0
        ports:
        - containerPort: 80
