kubernetes-owncloud/oc-srv.yaml
kind: Service
apiVersion: v1
metadata:
  name: oc-service
spec:
  selector:
    app: owncloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
