kubernetes-owncloud/oc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: owncloud
          servicePort: 80
